--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,22 +1,6 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
     "plugins": [
       {
@@ -26,6 +10,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@yike-design/react": [
+        "../packages/yike-design-react/src/index.ts"
       ]
     }
   },
@@ -35,7 +22,4 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
 }
