--- a/docs/package.json
+++ b/docs/package.json
@@ -15,11 +15,14 @@
     "@types/mdx": "^2.0.5",
     "@yike-design/react": "workspace:^",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "remark-demo-plugin": "workspace:^",
-    "tailwindcss": "3.3.3",
-    "clsx": "^2.0.0"
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@total-typescript/ts-reset": "^0.4.2"
   }
 }
