--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "postcss-less": "^6.0.0",
+    "postcss-scss": "^4.0.6",
     "prettier": "^3.0.0",
     "standard-version": "^9.5.0",
     "stylelint": "^15.10.2",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-less": "^1.0.8",
-    "stylelint-order": "^6.0.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
@@ -44,7 +45,7 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{css,less}": [
+    "*.{css,less,scss}": [
       "stylelint --fix",
       "prettier --write"
     ]
