--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "new": "tsx ./scripts/new-component.ts",
     "docs:dev": "pnpm --filter @yike-design/react-docs dev",
     "release": "standard-version",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "pnpm --filter remark-demo-plugin build && pnpm --filter @yike-design/react build"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.6.7",
