--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -20,6 +20,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+    ".next/types/**/*.ts",
+    "dist/types/**/*.ts"
+  ]
 }
