--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docs:dev": "pnpm --filter @yike-design/react-docs dev",
     "release": "standard-version",
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "pnpm --filter remark-demo-plugin build && pnpm --filter @yike-design/react build",
+    "postinstall": "pnpm --filter remark-demo-plugin build",
     "cli:dev": "pnpm --filter @yike-design/cli dev",
     "cli:build": "pnpm --filter @yike-design/cli build",
     "build": "pnpm --filter @yike-design/react build"
