--- a/packages/yike-design/package.json
+++ b/packages/yike-design/package.json
@@ -2,28 +2,30 @@
   "name": "@yike-design/react",
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/es/index.js",
-  "types": "./dist/es/index.d.ts",
-  "unpkg": "./dist/yike.umd.js",
+  "module": "./src/index.ts",
   "exports": {
     ".": {
-      "import": "./dist/es/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/es/index.d.ts"
-    }
+      "import": "./src/index.ts"
+    },
+    "./style": "./src/styles/index.ts"
   },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
-    "build": "yike build --bundle"
+    "build": "yike build --bundle",
+    "prepack": "clean-package",
+    "postpack": "clean-package restore"
   },
+  "clean-package": "./clean-package.config.json",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.22.6"
+  },
+  "devDependencies": {
+    "clean-package": "^2.2.0"
   }
 }
