feat(cli): add create component command

--- a/packages/yike-design/package.json
+++ b/packages/yike-design/package.json
@@ -13,6 +13,7 @@
     "src"
   ],
   "scripts": {
+    "new": "yike create",
     "build": "yike build --bundle",
     "prepack": "clean-package",
     "postpack": "clean-package restore"
