--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postinstall": "pnpm --filter @yike-design/remark-doc-demo build",
     "cli:dev": "pnpm --filter @yike-design/cli dev",
     "cli:build": "pnpm --filter @yike-design/cli build",
+    "new": "pnpm --filter @yike-design/react new",
     "build": "pnpm --filter @yike-design/react build"
   },
   "devDependencies": {
