--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
