--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@yike-design/cli",
   "version": "0.0.1",
   "bin": {
-    "yike": "./bin/yike.js"
+    "yike": "./bin/yike.mjs"
   },
   "files": [
     "bin",
@@ -10,18 +10,16 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/es/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/es/index.d.ts"
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
     }
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
-  "types": "dist/es/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "dev": "rimraf dist && concurrently \"tsc -w -p ./tsconfig.json\" \"tsc -w -p ./tsconfig.cjs.json\"",
-    "build": "rimraf dist && concurrently \"tsc -p ./tsconfig.json\" \"tsc -p ./tsconfig.cjs.json\""
+    "dev": "unbuild --stub",
+    "build": "unbuild"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.13",
@@ -30,7 +28,6 @@
     "@types/merge2": "^1.4.1",
     "@types/through2": "^2.0.38",
     "@types/vinyl": "^2.0.7",
-    "concurrently": "^8.2.0",
     "types-package-json": "^2.0.39",
     "unbuild": "^1.2.1"
   },
@@ -46,7 +43,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "autoprefixer": "10.4.14",
     "cac": "^6.7.14",
-    "chalk": "4.1.2",
+    "chalk": "^5.3.0",
     "consola": "^3.2.3",
     "defu": "^6.1.2",
     "gulp": "^4.0.2",
@@ -55,7 +52,7 @@
     "gulp-typescript": "6.0.0-alpha.1",
     "jiti": "^1.19.1",
     "merge2": "^1.4.1",
-    "ora": "5.4.1",
+    "ora": "^7.0.1",
     "rimraf": "^5.0.1",
     "rollup": "^3.27.2",
     "rollup-plugin-postcss": "^4.0.2",
