fix(cli): interactive command

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,7 @@
     "@types/gulp": "^4.0.13",
     "@types/gulp-babel": "^6.1.30",
     "@types/gulp-postcss": "^8.0.3",
+    "@types/inquirer": "^9.0.3",
     "@types/merge2": "^1.4.1",
     "@types/through2": "^2.0.38",
     "@types/vinyl": "^2.0.7",
@@ -50,6 +51,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-typescript": "6.0.0-alpha.1",
+    "inquirer": "^9.2.10",
     "jiti": "^1.19.1",
     "merge2": "^1.4.1",
     "ora": "^7.0.1",
