--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "docs:build": "pnpm --filter @yike-design/react-docs build",
     "release": "standard-version",
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "pnpm --filter @yike-design/remark-doc-demo build",
+    "postinstall": "npm-run-all -s cli:build -p doc-demo:build icons",
     "cli:dev": "pnpm --filter @yike-design/cli dev",
     "cli:build": "pnpm --filter @yike-design/cli build",
     "new": "pnpm --filter @yike-design/react new",
     "build": "pnpm --filter @yike-design/react build",
+    "doc-demo:build": "pnpm --filter @yike-design/remark-doc-demo build",
+    "icons": "npm-run-all -s icons:generate icons:build",
     "icons:build": "pnpm --filter @yike-design/react-icons build",
     "icons:generate": "pnpm --filter @yike-design/react-icons generate"
   },
@@ -39,6 +41,7 @@
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "npm-run-all": "^4.1.5",
     "postcss-less": "^6.0.0",
     "postcss-scss": "^4.0.6",
     "prettier": "^3.0.0",
