--- a/packages/yike-design/package.json
+++ b/packages/yike-design/package.json
@@ -24,7 +24,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.6"
+    "@babel/runtime": "^7.22.6",
+    "classnames": "^2.3.2"
   },
   "devDependencies": {
     "clean-package": "^2.2.0"
