--- a/docs/package.json
+++ b/docs/package.json
@@ -21,8 +21,10 @@
     "clsx": "^2.0.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.27",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-live": "^4.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3"
