--- a/packages/remark-doc-demo/package.json
+++ b/packages/remark-doc-demo/package.json
@@ -13,9 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/generator": "^7.22.15",
+    "@babel/parser": "^7.22.16",
+    "@babel/traverse": "^7.22.17",
+    "@babel/types": "^7.22.17",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@types/babel__generator": "^7.6.4",
+    "@types/babel__traverse": "^7.20.1",
     "@types/unist": "^3.0.0",
     "unified": "^10.1.2"
   }
