--- a/docs/package.json
+++ b/docs/package.json
@@ -19,8 +19,11 @@
     "ahooks": "^3.7.8",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "next-contentlayer": "^0.3.4",
     "next-nprogress-bar": "^2.1.2",
     "postcss": "8.4.27",
     "react-copy-to-clipboard": "^5.1.0",
