--- a/docs/package.json
+++ b/docs/package.json
@@ -29,6 +29,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-live": "^4.1.3",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3"
   },
