feat: support external complex demo

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "~demos/*": ["./src/content/demos/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
