--- a/docs/package.json
+++ b/docs/package.json
@@ -21,12 +21,15 @@
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "enhanced-resolve": "^5.15.0",
+    "esbuild": "^0.19.2",
     "eslint-config-next": "13.4.12",
     "lodash.omit": "^4.5.0",
     "next": "13.4.12",
     "next-contentlayer": "^0.3.4",
     "next-nprogress-bar": "^2.1.2",
     "postcss": "8.4.27",
+    "prism-react-renderer": "^2.0.6",
     "react-copy-to-clipboard": "^5.1.0",
     "react-live": "^4.1.3",
     "react-syntax-highlighter": "^15.5.0",
