feat: inline demo support external import

--- a/docs/package.json
+++ b/docs/package.json
@@ -43,6 +43,7 @@
     "@types/lodash.omit": "^4.5.7",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@yike-design/inline-demo-loader": "workspace:^",
     "remark-slug": "^7.0.1",
     "sass": "^1.64.2"
   }
