--- a/docs/package.json
+++ b/docs/package.json
@@ -31,6 +31,7 @@
     "postcss": "8.4.27",
     "prism-react-renderer": "^2.0.6",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-error-boundary": "^4.0.11",
     "react-live": "^4.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark-frontmatter": "^4.0.1",
