--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,7 @@
     "next": "13.4.12",
     "next-contentlayer": "^0.3.4",
     "next-nprogress-bar": "^2.1.2",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "prism-react-renderer": "^2.0.6",
     "react-copy-to-clipboard": "^5.1.0",
