chore: remove contentlayer

--- a/docs/package.json
+++ b/docs/package.json
@@ -19,14 +19,14 @@
     "ahooks": "^3.7.8",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
-    "date-fns": "^2.30.0",
     "enhanced-resolve": "^5.15.0",
     "esbuild": "^0.19.2",
     "eslint-config-next": "13.4.12",
+    "glob": "^10.3.3",
+    "gray-matter": "^4.0.3",
+    "lodash.groupby": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "next": "13.4.12",
-    "next-contentlayer": "^0.3.4",
     "next-nprogress-bar": "^2.1.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.omit": "^4.5.7",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-syntax-highlighter": "^15.5.7",
