--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cli:build": "pnpm --filter @yike-design/cli build",
     "new": "pnpm --filter @yike-design/react new",
     "build": "pnpm --filter @yike-design/react build",
-    "doc-demo:build": "pnpm --filter @yike-design/remark-doc-demo build",
+    "doc-demo:build": "pnpm --filter @yike-design/mdx-demo build",
     "icons:build": "pnpm --filter @yike-design/react-icons build",
     "icons:generate": "pnpm --filter @yike-design/react-icons generate"
   },
