--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,7 +57,7 @@
     "consola": "^3.2.3",
     "defu": "^6.1.2",
     "esbuild": "^0.19.2",
-    "glob": "^10.3.3",
+    "glob": "10.3.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-postcss": "^9.0.1",
