--- a/packages/yike-design-icon/tsconfig.json
+++ b/packages/yike-design-icon/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "useDefineForClassFields": true,
+    "declaration": true,
+    "isolatedModules": false,
     "rootDir": ".",
     "paths": {}
   },
