--- a/packages/yike-design/package.json
+++ b/packages/yike-design/package.json
@@ -1,19 +1,12 @@
 {
   "name": "@yike-design/react",
   "version": "0.0.0",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/es/index.js",
+  "description": "yike-design react component library",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
   "exports": {
-    ".": {
-      "import": "./dist/es/index.js",
-      "require": "./dist/cjs/index.js"
-    },
-    "./es/": "./dist/es/components/",
-    "./cjs/": "./dist/cjs/components/",
-    "./style": {
-      "import": "./dist/es/styles/index.js",
-      "require": "./dist/cjs/styles/index.js"
-    }
+    ".": "./src/index.ts",
+    "./style": "./src/styles/index.ts"
   },
   "files": [
     "src"
@@ -34,7 +27,6 @@
     "@babel/runtime": "^7.22.6"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.18.2",
     "clean-package": "^2.2.0"
   }
 }
