--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "postinstall": "npm-run-all -p cli:build doc-demo:build",
     "cli:dev": "pnpm --filter @yike-design/cli dev",
     "cli:build": "pnpm --filter @yike-design/cli build",
-    "new": "pnpm --filter @yike-design/react new",
+    "generate": "yike generate",
+    "generate:component": "yike generate --type component",
+    "generate:document": "yike generate --type document",
     "build": "pnpm --filter @yike-design/react build",
     "test": "pnpm --filter @yike-design/react test",
     "doc-demo:build": "pnpm --filter @yike-design/mdx-demo build",
