chore: adjust prettier make code more readable

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,5 @@
   "bracketSameLine": false,
   "arrowParens": "avoid",
   "proseWrap": "preserve",
-  "htmlWhitespaceSensitivity": "css",
-  "singleAttributePerLine": true
+  "htmlWhitespaceSensitivity": "css"
 }
