feat: add affix

--- a/packages/yike-design/package.json
+++ b/packages/yike-design/package.json
@@ -23,7 +23,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.6"
+    "@babel/runtime": "^7.22.6",
+    "rc-resize-observer": "^1.4.0"
   },
   "devDependencies": {
     "clean-package": "^2.2.0"
