feat(cli): simplify document generation input

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,6 +27,7 @@
     "@types/gulp-postcss": "^8.0.3",
     "@types/gulp-rename": "^2.0.2",
     "@types/inquirer": "^9.0.3",
+    "@types/lodash.camelcase": "^4.3.9",
     "@types/lodash.capitalize": "^4.2.7",
     "@types/lodash.kebabcase": "^4.1.7",
     "@types/lodash.template": "^4.5.1",
@@ -65,6 +66,7 @@
     "gulp-typescript": "6.0.0-alpha.1",
     "inquirer": "^9.2.10",
     "jiti": "^1.19.1",
+    "lodash.camelcase": "^4.3.0",
     "lodash.capitalize": "^4.2.1",
     "lodash.kebabcase": "^4.1.1",
     "lodash.template": "^4.5.0",
